# legal-innovation-newsletter

./: .env.example  .gitignore  README.md  pyproject.toml  start-dashboard.cmd
.github/workflows/: generate-newsletter.yml
data/: seen_story_clusters.json  seen_urls.json  sources.yaml
docs/: codex-news-scan-prompt.md
issues/2026-05-19/: issue.html  issue.json  issue.md  issue.txt  qa_report.md
issues/2026-05-20/: editorial_selection.md  issue.html  issue.json  issue.md  issue.txt  qa_report.md  review_shortlist.json
issues/2026-05-21/: editorial_selection.md  issue.html  issue.json  issue.md  issue.txt  qa_report.md  review_shortlist.json
issues/2026-05-24/: candidates.json  editorial_selection.md  issue.html  issue.json  issue.md  issue.txt  qa_report.md  review_shortlist.json
issues/2026-06-09/: candidates.json  editorial_selection.md  issue.html  issue.json  issue.md  issue.txt  qa_report.md  review_shortlist.json
issues/2026-06-10/: candidates.json  editorial_selection.md  issue.html  issue.json  issue.md  issue.txt  qa_report.md  review_shortlist.json
issues/2026-06-11/: candidates.json
issues/2026-06-13/: candidates.json
issues/2026-06-14/: candidates.json
issues/2026-06-16/: candidates.json
issues/2026-06-17/: candidates.json
issues/2026-06-19/: candidates.json
issues/2026-06-28/: candidates.json
src/legal_innovator/: __init__.py  (+17 more)
tests/: test_archive_and_pr.py  test_candidates.py  test_classification.py  test_dashboard.py  test_pipeline_helpers.py  test_publishing.py  test_rendering_and_qa.py  test_selection.py  test_sources.py
(+20 files in other folders)
