[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-irish-legal-innovator"
version = "0.1.0"
description = "Newsletter generation pipeline for The Irish Legal Innovator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "openai>=1.40.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
legal-innovator = "legal_innovator.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
legal_innovator = ["rendering/templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
